added courses scaffold

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,8 @@
     </h1>
     <ul class="navbar">
       <li class="right_border"><%= link_to "Home", controller: "home", action: "display"%></li>
-      <!--<li class="right_border"><#%= link_to "Courses", controller: "course", action: "display"%></li>
-      <li class="right_border"><#%= link_to "Professors", controller: "professor", action: "display"%></li>
+      <li class="right_border"><%= link_to "Courses", controller: "courses", action: "index"%></li>
+      <!--<li class="right_border"><#%= link_to "Professors", controller: "professor", action: "display"%></li>
       <li><#%= link_to "Students", controller: "student", action: "display"%></li>-->
     </ul>
 
