--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -2,30 +2,30 @@
 
 <h1>Courses</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Credit</th>
-      <th>Course description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<%= form_with(model: @course) do |form| %>
 
-  <tbody>
-    <% @courses.each do |course| %>
-      <tr>
-        <td><%= course.name %></td>
-        <td><%= course.credit %></td>
-        <td><%= course.course_description %></td>
-        <td><%= link_to 'Show', course %></td>
-        <td><%= link_to 'Edit', edit_course_path(course) %></td>
-        <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+  <div class="field">
+    <%= form.label :select_a_department %>
+    <%= form.select :department, @options %>
+  </div>
+
+<% end %>
+
+<% if @courses %>
+  <% @courses.each do |course| %>
+    <%= :department %>
+    <% if course.department.name == :department %>
+      <%= @courses[0].name %>
+      <h1><%= course.name %></h1>
     <% end %>
-  </tbody>
-</table>
+  <% end %>
+<% end %>
 
+<!--
+        <td><#%= link_to 'Show', course %></td>
+        <td><#%= link_to 'Edit', edit_course_path(course) %></td>
+        <td><#%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+-->
 <br>
 
 <%= link_to 'New Course', new_course_path %>
