--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,31 +1,25 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Courses</h1>
-
-<%= form_with(model: @course) do |form| %>
-
-  <div class="field">
-    <%= form.label :select_a_department %>
-    <%= form.select :department, @options %>
-  </div>
-
-<% end %>
-
+<h1 class="big_header">List of all courses:</h1><br><br>
 <% if @courses %>
-  <% @courses.each do |course| %>
-    <%= :department %>
-    <% if course.department.name == :department %>
-      <%= @courses[0].name %>
-      <h1><%= course.name %></h1>
-    <% end %>
+  <% @courses.each do |c| %>
+    <h1><%= c.name %><span class="normal_font left_margin"><%= link_to 'Show', c %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <%= link_to 'Edit', edit_course_path(c) %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <%= link_to 'Destroy', c, method: :delete, data: { confirm: 'Are you sure?' } %></span></h1>
+    <h2>Department: <%= c.department.name %></h2>
+    <h2>Credit: <%= c.credit %></h2>
+    <h2>Professor: </h2>
+    <h2>Course description: <span class="normal_font"><%= c.course_description %></span></h2>
+    <br><br>
   <% end %>
 <% end %>
+
 
 <!--
         <td><#%= link_to 'Show', course %></td>
         <td><#%= link_to 'Edit', edit_course_path(course) %></td>
         <td><#%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
 -->
-<br>
+<br><br><br><br>
 
 <%= link_to 'New Course', new_course_path %>
