--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,11 +32,11 @@
     <hr>
 
     <div id="footer">
-      Composed by<br>
-      Gordian Bruns<br>
-      Benjamin Lupton<br>
-      Sandy Wei<br>
-      Ben Hilfinger
+      <small>Composed by<br>
+      &nbsp&nbsp Gordian Bruns<br>
+      &nbsp&nbsp Benjamin Lupton<br>
+      &nbsp&nbsp Sandy Wei<br>
+      &nbsp&nbsp Benjamin Hilfinger</small>
     </div>
   </body>
 </html>
