added student back in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,8 @@
     <ul class="navbar">
       <li class="right_border"><%= link_to "Home", controller: "home", action: "display"%></li>
       <li class="right_border"><%= link_to "Courses", controller: "courses", action: "index"%></li>
-      <!--<li class="right_border"><#%= link_to "Professors", controller: "professor", action: "display"%></li>
-      <li><#%= link_to "Students", controller: "student", action: "display"%></li>-->
+      <!--<li class="right_border"><#%= link_to "Professors", controller: "professor", action: "display"%></li>-->
+      <li><%= link_to "Students", controller: "students", action: "index"%></li>
     </ul>
 
     <div id="main">
