Added dropdown menus

--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -26,6 +26,16 @@
     <%= form.text_area :course_description %>
   </div>
 
+  <div class="field">
+    <%= form.label :professor %>
+    <%= form.select :professor_id, @options_professors %>
+  </div>
+
+  <div class="field">
+    <%= form.label :department %>
+    <%= form.select :department_id, @options_departments %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
