added dropdown menu

--- a/app/views/professors/_form.html.erb
+++ b/app/views/professors/_form.html.erb
@@ -27,7 +27,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :department %>
+    <%= form.label :department_id %>
     <%= form.select :department_id, @options_departments %>
   </div>
 
