--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+#welcome_heading {
+  text-align: center;
+  font-size: 80px;
+  font-weight: bold;
+}
+
+.links a {
+  text-decoration: none;
+  margin-left: 40px;
+  font-size: 60px;
+  font-weight: bold;
+  color: black;
+  padding: 2%;
+}
