--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -3,9 +3,6 @@ pre {
   padding: 10px;
   font-size: 11px; }
 
-a {
-  color: #000; }
-
 th {
   padding-bottom: 5px; }
 
@@ -47,7 +44,8 @@ div.actions {
 label {
   display: block; }
 
-.gravatar{float: right;
-  margin: 33px;
-  margin-top: -150px;
+.gravatar{
+  float: right;
+  margin: -180px 100px;
+  height: 120px;
 }
