--- a/app/views/professors/index.html.erb
+++ b/app/views/professors/index.html.erb
@@ -1,31 +1,18 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Professors</h1>
+<h1 class="big_header">List of all professors:</h1><br><br>
+<% if @professors %>
+  <% @professors.each do |p| %>
+    <h1><%= p.name %><span class="normal_font left_margin"><%= link_to 'Show', p %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <%= link_to 'Edit', edit_professor_path(p) %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <%= link_to 'Destroy', p, method: :delete, data: { confirm: 'Are you sure?' } %></span></h1>
+    <h2>Department: <%= p.department.name %></h2>
+    <h2>Title: <%= p.title %></h2>
+    <h2>Email: <%= p.email %></h2>
+    <br><br>
+  <% end %>
+<% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Title</th>
-      <th>Email</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @professors.each do |professor| %>
-      <tr>
-        <td><%= professor.name %></td>
-        <td><%= professor.title %></td>
-        <td><%= professor.email %></td>
-        <td><%= link_to 'Show', professor %></td>
-        <td><%= link_to 'Edit', edit_professor_path(professor) %></td>
-        <td><%= link_to 'Destroy', professor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
+<br><br><br><br>
 
 <%= link_to 'New Professor', new_professor_path %>
