--- a/app/views/professors/show.html.erb
+++ b/app/views/professors/show.html.erb
@@ -17,3 +17,5 @@
 
 <%= link_to 'Edit', edit_professor_path(@professor) %> |
 <%= link_to 'Back', professors_path %>
+
+<h1> <%= gravatar_for @professor %>  </h1>
