--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,35 +1,18 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Students</h1>
+<h1 class="big_header">List of all students:</h1><br><br>
+<% if @students %>
+  <% @students.each do |s| %>
+    <h1><%= s.name %><span class="normal_font left_margin"><%= link_to 'Show', s %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <%= link_to 'Edit', edit_student_path(s) %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <%= link_to 'Destroy', s, method: :delete, data: { confirm: 'Are you sure?' } %></span></h1>
+    <h2>Major: <%= s.major %></h2>
+    <h2>Graduation Year: <%= s.grad_year %></h2>
+    <h2>Advisor: <%= s.advisor %></h2>
+    <br><br>
+  <% end %>
+<% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Major</th>
-      <th>Grad year</th>
-      <th>Advisor</th>
-      <th>Email</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @students.each do |student| %>
-      <tr>
-        <td><%= student.name %></td>
-        <td><%= student.major %></td>
-        <td><%= student.grad_year %></td>
-        <td><%= student.advisor %></td>
-        <td><%= student.email %></td>
-        <td><%= link_to 'Show', student %></td>
-        <td><%= link_to 'Edit', edit_student_path(student) %></td>
-        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
+<br><br><br><br>
 
 <%= link_to 'New Student', new_student_path %>
